create login backend

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGO_URL="mongodb+srv://sachinda_123:<2Eg_S#keTs9h_BP>@cluster0.mdluu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 PORT=3001
+JWT_SECRET='PASSWORDSECRET'
