--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "ajv": "^8.17.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
